[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nflows-xy"
version = "0.1.0"
description = "Flow-based trivialising maps for the classical XY model"
authors = ["marshrossney <17361029+marshrossney@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "nflows_xy"}]

[tool.poetry.dependencies]
python = "3.10.7"
torch = "2"
numpy = "^1.26.0"
tqdm = "^4.66.1"
pandas = "^2.1.1"
jsonargparse = {extras = ["signatures"], version = "^4.25.0"}
matplotlib = "^3.8.0"
plotille = "^5.0.0"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"

[tool.poetry.scripts]
nfxy = "nflows_xy.scripts.cli:cli"

[tool.black]
line-length = 79
target-version = ['py310']
exclude = '''
(
  /(
      \.git
    | \.github
    | \.pytest_cache
    | \.venv
    | __pycache__
    | workbench
  )/
)
'''
